--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,13 @@ button[title]:hover::after {
     width: 100px;
   }
 }
+.spin-off-note {
+  font-size: 0.9em;
+  color: #666;
+  text-align: center;
+  margin-top: 1em;
+  margin-bottom: 2em;
+}
 
 
 
