Restore original CSS styles and layout

--- a/css/style.css
+++ b/css/style.css
@@ -450,12 +450,13 @@ button[title]:hover::after {
   }
 }
 .spin-off-note {
-  font-size: 0.9em;
-  color: #666;
-  text-align: center;
-  margin-top: 1em;
-  margin-bottom: 2em;
+  text-align: left;           /* 左寄せ（本文と同じ位置） */
+  margin: 2em 0 3em 0;        /* 上下の余白をしっかりとる */
+  font-size: 0.95em;          /* やや小さめで控えめに */
+  color: #666;                /* 本文より少し淡い色で */
+  padding-left: 1em;          /* 本文とズレないよう軽く内側に */
 }
+
 
 
 
