--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,7 @@ button[title]:hover::after {
   max-width: 800px;           /* mainと同じ最大幅 */
   margin: 2.5em auto 3.5em auto; /* 上下余白＋中央寄せ */
   padding: 0 1rem;            /* 本文枠と同じパディング */
-  text-align: right;          /* 右寄せ */
+  text-align: center;          /* 右寄せ */
   font-size: 0.9em;
   color: #666;
   line-height: 1.7;
@@ -465,6 +465,7 @@ button[title]:hover::after {
   }
  ｝
   
+
 
 
 
